--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link href="./assets/fonts/Lato-Light.ttf" rel="stylesheet">
   <meta charset="utf-8">
   <title>ResultDashboard</title>
   <base href="/">
